# AFLuent

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  automate.py  pyproject.toml  samples.txt  try_run.py
.github/workflows/: main .yml  release.yml
afluent/: __init__.py  complexity_generator.py  example.py  line.py  main.py  proj_file.py  spectrum_parser.py  tiebreak_generator.py
mutmut_expirement_code/: mutmut_config.py  setup.cfg
tests/: conftest.py  test_example.py  test_line.py  test_proj_file.py  test_spectrum_parser.py
tests/test_data/: sample_file.py  test_spectrum_init.json
